--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,34 +3,46 @@ body{
 }
 
 .home_button{
-    border-radius: 50px;
-    border: 0; /* none */
+    border-radius: 0px;
+    border: 2; /* none */
     border-color: #00ff88;
-    width: auto;
-    position: sticky;top: 20px ;
-    color: #ff0077;
-    background-color: #b7b8db;
+    color: #000000;
+    background-color: rgba(255, 255, 255, 0);
+    width: 170px;
+    height: 50px;
+    font-size: 30px;
 }
 
 .other_buttons{
-    border-radius: 50px;
-    border: 0; /* none */
-    border-color: aquamarine;
-    width: auto;
+    border-radius: 0px;
+    border: 2; /* none */
+    border-color: #00ff88;
+    color: #000000;
+    background-color: rgba(255, 255, 255, 0);
+    width: 170px;
+    height: 50px;
     position: sticky;top: 20px ;
-    color: blueviolet;
-    background-color: aqua;
+    font-size: 30px;
 }
 
 #home_button1{
-    position: absolute; left: 100px; top: 20px;
+    position: absolute; left: 25px; top: 25px;
 }
 #menu2{
-    position: absolute; left: 200px; top: 20px;
+    position: absolute; left: 225px; top: 25px;
 }
 #menu3{
-    position: absolute; left: 350px; top: 20px;
+    position: absolute; left: 425px; top: 25px;
+}
+#menu4{
+    position: absolute; left: 625px; top: 25px;
 }
 #index_button{
     width: 10%;
+}
+#pictures{
+    position: absolute; left: 25px; top: 100px;
+}
+#text{
+    position: absolute; left: 25px; top: 100px;  
 }
