--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,14 +28,20 @@ body{
 #home_button1{
     position: absolute; left: 25px; top: 25px;
 }
-#menu2{
+#menu1{
     position: absolute; left: 225px; top: 25px;
 }
-#menu3{
+#menu2{
     position: absolute; left: 425px; top: 25px;
 }
-#menu4{
+#menu3{
     position: absolute; left: 625px; top: 25px;
+}
+#menu4{
+    position: absolute; left: 825px; top: 25px;
+}
+#menu5{
+    position: absolute; left: 1025px; top: 25px;
 }
 #index_button{
     width: 10%;
@@ -44,5 +50,5 @@ body{
     position: absolute; left: 25px; top: 100px;
 }
 #text{
-    position: absolute; left: 25px; top: 100px;  
+   position: absolute; left: 25px; top: 100px;  
 }
