--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,7 +5,7 @@ body{
 .home_button{
     border-radius: 0px;
     border: 2; /* none */
-    border-color: #00ff88;
+    border-color: #444444;
     color: #000000;
     background-color: rgba(255, 255, 255, 0);
     width: 170px;
@@ -16,7 +16,7 @@ body{
 .other_buttons{
     border-radius: 0px;
     border: 2; /* none */
-    border-color: #00ff88;
+    border-color: #444444;
     color: #000000;
     background-color: rgba(255, 255, 255, 0);
     width: 170px;
