modified:   CSS/styles.css 	modified:   index.html 	modified:   websites/seite1.html 	modified:   websites/seite2.html 	modified:   websites/seite3.html 	new file:   websites/seite4.html

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,6 +35,9 @@ body{
 #menu3{
     position: absolute; left: 650px; top: 25px;
 }
+#menu4{
+    position: absolute; left: 850px; top: 25px;
+}
 #index_button{
     width: 10%;
 }
