--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,6 +22,9 @@ body{
     position: sticky;top: 20px ;
     font-size: 30px;
 }
+p{
+    font-family:verdana;
+}
 
 #home_button1{
     position: absolute; left: 50px; top: 25px;
