modified:   CSS/styles.css 	modified:   "websites/l\303\266sungen.html"

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,6 +41,9 @@ p{
 #menu4{
     position: absolute; left: 850px; top: 25px;
 }
+#menu5{
+    position: absolute; left: 1050px; top: 25px;
+}
 #index_button{
     width: 10%;
 }
