modified:   CSS/styles.css 	modified:   index.html 	modified:   "websites/fu\303\237ball.html" 	modified:   websites/volleyball.html

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -85,6 +85,32 @@ input {
     background-color: #EDEDED;
 }
 
+select {
+    width: 90%;
+    max-width: 400px;
+    margin: 10px auto;
+    display: block;
+    font-size: 1rem;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background-color: #EDEDED;
+    color: #000000;
+}
+
+option {
+    width: 90%;
+    max-width: 400px;
+    margin: 10px auto;
+    display: block;
+    font-size: 1rem;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background-color: #EDEDED;
+    color: #000000;
+}
+
 #buttons-container {
     text-align: center;
     padding: 20px;
